--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "Inicio.js",
    "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node Inicio.js"
   },
   "keywords": [],
   "author": "",
